feat: abstract client validation to its own lambda

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@aws-lambda-powertools/commons": "^2.21.0",
     "@aws-lambda-powertools/logger": "^2.21.0",
     "@aws-sdk/client-dynamodb": "^3.828.0",
+    "@aws-sdk/client-lambda": "^3.828.0",
     "@aws-sdk/client-ssm": "^3.828.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
